case studies cleaned up code added semantic html code <section> fixed spacing issues added steve jobs quote removed max height on card-case-studies

--- a/wds_website/src/stylesheets/css/main.css
+++ b/wds_website/src/stylesheets/css/main.css
@@ -729,8 +729,7 @@ li {
   -webkit-box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.25);
   width: 634px;
-  max-width: 643px;
-  max-height: 600px; }
+  max-width: 643px; }
 
 .lightgreen {
   background-color: #BDCCD4; }
