--- a/wds_website/src/stylesheets/scss/helper-classes.scss
+++ b/wds_website/src/stylesheets/scss/helper-classes.scss
@@ -620,7 +620,6 @@
     box-shadow: 0px 2px 1px 1px rgba(0,0,0,0.25);
     width: 634px;
     max-width: 643px;
-    max-height: 600px;
   }
 
   
